--- a/src/components/Common/ThemeToggle/index.module.css
+++ b/src/components/Common/ThemeToggle/index.module.css
@@ -1,12 +1,7 @@
 .themeToggle {
-  @apply size-9
-    rounded-md
-    p-2
-    text-neutral-700
-    dark:text-neutral-300;
+  @apply size-9 rounded-md p-2 text-neutral-700 dark:text-neutral-300;
 
   &:hover {
-    @apply bg-neutral-100
-      dark:bg-neutral-900;
+    @apply bg-neutral-100 dark:bg-neutral-900;
   }
 }
