--- a/src/components/Containers/Sidebar/SidebarItem/index.module.css
+++ b/src/components/Containers/Sidebar/SidebarItem/index.module.css
@@ -1,33 +1,19 @@
 .sideBarItem {
-  @apply flex
-    w-full
-    list-none
-    text-neutral-800
-    dark:text-neutral-200;
+  @apply flex w-full list-none text-neutral-800 dark:text-neutral-200;
 
   a {
-    @apply inline-flex
-      items-center
-      gap-2
-      p-2;
+    @apply inline-flex items-center gap-2 p-2;
   }
 
   .label {
-    @apply w-full
-      text-sm
-      font-regular;
+    @apply w-full text-sm font-regular;
   }
 
   .icon {
-    @apply size-3
-      text-neutral-500
-      dark:text-neutral-200;
+    @apply size-3 text-neutral-500 dark:text-neutral-200;
   }
 }
 
 .active {
-  @apply rounded
-    bg-green-600
-    text-white
-    dark:text-white;
+  @apply rounded bg-green-600 text-white dark:text-white;
 }
